syntax = "proto3";
package inferred_input_v1;
option go_package = "github.com/carousell/aggproto/examples/goOut/inferred_input_v1";
service MaskedListingWMediaService {
	rpc InvokeMaskedListingWMedia (MaskedListingWMediaRequest) returns (MaskedListingWMediaResponse);
}
message MaskedListingWMediaRequest {
	message GetListingRequestGen {
		string listing_id = 1;
	}
	GetListingRequestGen get_listing_request = 1;
}
message MaskedListingWMediaResponse {
	message ListingGen {
		string title = 1;
		string description = 2;
		string photo_url = 3;
	}
	ListingGen listing = 1;
}
